# spoor

./: .gitignore  Cargo.toml  README.md  config.json  config.toml  sources.yaml
benchmarks/: latest.txt  run-2026-07-10_0331.txt
data/: words.csv  words.db
docs/: AGENT_PROMPT.md  NORTH_STAR.md  PROJECT_BRIEF.md  prompts.md  rename-project.md
docs/design/: llm-parity.md
docs/reference/: architecture.md  cli.md  data-model.md  roadmap.md
docs/research/: semantic-gap.md
scripts/: benchmark.ps1
src/: cli.rs  config.rs  lib.rs  main.rs  sources.rs  translit.rs
src/db/: mod.rs
src/fetch/: mod.rs
src/generator/: mod.rs  rng.rs  template.rs
src/lookup/: mod.rs
tests/: config_test.rs  fetch_test.rs  integration_test.rs  lookup_test.rs
