[package]
name = "name-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
csv = "1"
rand = "0.8"
rand_chacha = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tempfile = "3"
ureq = "2"
indicatif = "0.17"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
